--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="w-layout-grid about-component">
                            <div data-w-id="0c8ac8c8-0721-92f0-d749-9a5fc4234b28" style="opacity:0" class="about-content-left">
                               <h3 class="heading-style-h3">A bit about me. 
-                                 <i class="fa-brands fa-facebook"></i>
+                                 <!-- <i class="fa-brands fa-facebook"></i> -->
                               </h3>
                               <img src="https://assets.website-files.com/649ae0cd58b0e0d5d1826ea7/649ae0cd58b0e0d5d1826eef_Vector%20(6).svg" loading="lazy" width="83" alt="" class="icon-image"/>
                            </div>
