--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="line-divider"></div>
                         <div class="padding-top padding-medium">
                            <div class="w-layout-grid footer-bottom-wrapper">
-                              <div id="w-node-_7f249d24-b479-27c2-4fbe-3e53e0d00de0-e0d00dd8" class="footer-credit-text">© 2023 Me. All rights reserved.</div>
+                              <div id="w-node-_7f249d24-b479-27c2-4fbe-3e53e0d00de0-e0d00dd8" class="footer-credit-text">© <span id="current-year"></span> Me. All rights reserved.</div>
                               <div id="w-node-_7f249d24-b479-27c2-4fbe-3e53e0d00de2-e0d00dd8" class="footer-link">
                                  <!-- <div class="text-size-small">Created By: <a href="https://vndella.webflow.io/" target="_blank" class="creator-link">Carson Idsinga</a></div> -->
                               </div>
@@ -232,5 +232,8 @@
       <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=649ae0cd58b0e0d5d1826ea7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
       </script>
       <script src="./js/app.js" type="text/javascript"></script>
+      <script>
+         document.getElementById("current-year").textContent = new Date().getFullYear();
+     </script>
    </body>
 </html>
